# ME106a_Project_Duplo

./: CHANGES_SESSION_2026-05-14.md  README.md  brick_detector.py  build.yaml  build_planner.py  frames_2026-05-04_14.06.23.gv  lego_build.json  lego_builder.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/perception/lib/perception/: brick_detector  camera_transform  hsv_tuner
install/perception/share/perception/: package.sh
install/planning/lib/planning/: build_planner  duplo.launch  duplo_launch  ik  main
install/planning/share/planning/: package.sh  package.xml
install/planning/share/planning/launch/: duplo.launch.py  duplo_launch.py
install/planning/share/planning/planning/: duplo.launch.py
install/ros2_aruco/share/ros2_aruco/: package.sh
install/ros2_aruco_interfaces/share/ros2_aruco_interfaces/: local_setup.sh  package.sh
log/: latest_build
src/: build.yaml  main.py
src/perception/: package.xml  setup.py
src/perception/perception/: brick_detector.py  hsv_tuner.py  static_tf_transform.py
src/perception/rviz/: duplo.rviz
src/planning/: package.xml  setup.py
src/planning/launch/: duplo.launch.py  duplo_config.rviz
src/planning/planning/: build_planner.py  controller.py  ik.py  main.py  planning_node.py
src/planning/planning/launch/: duplo.launch.py  duplo_config.rviz
